Setup bien hecho para las plantillas y custom fields

--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -58,3 +58,112 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+
+/*Home*/
+html, body, #page, .site-inner, .site-content, .wrapper, .intro{
+	height: 100%;
+	background-position: center;
+	background-size: cover;
+}
+/*END Home*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
