--- a/style.css
+++ b/style.css
@@ -56,3 +56,11 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+/*Home*/
+html, body, #page, .site-inner, .site-content, .wrapper, .intro {
+  height: 100%;
+  background-position: center;
+  background-size: cover; }
+
+/*END Home*/
