--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -75,6 +75,7 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro{
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		z-index: 11;
 
 		h1{
 			font-weight: 700;
@@ -119,6 +120,36 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro{
 		right: 0px;
 	}
 }
+
+.video{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 10;
+	display: none;
+}
+.video video{
+	 position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+ background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+  background-size: cover;
+  transition: 1s opacity;
+
+}
+
+@media screen and (min-width: 1025px) {
+	.video{
+		display: block;
+	}
+}
+
 /*END Home*/
 
 
