--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  z-index: 11; }
   .intro .intro_container h1 {
     font-weight: 700;
     color: #ffffff;
@@ -106,5 +107,30 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro {
 
 .intro .mapa {
   right: 0px; }
+
+.video {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 10;
+  display: none; }
+
+.video video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translateX(-50%) translateY(-50%);
+  background: url("//demosthenes.info/assets/images/polina.jpg") no-repeat;
+  background-size: cover;
+  transition: 1s opacity; }
+
+@media screen and (min-width: 1025px) {
+  .video {
+    display: block; } }
 
 /*END Home*/
