--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -15,51 +15,9 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-
+@import "reset";
+@import "vars";
+@import "mixins";
 
 /*Home*/
 html, body, #page, .site-inner, .site-content, .wrapper, .intro{
@@ -115,10 +73,29 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro{
 	}
 	.llamar{
 		left: 0px;
+		@include basic;
+
+		&.left{
+			left:-100%;
+		}
 	}
 	.mapa{
 		right: 0px;
+		@include basic;
+
+		&.right{
+			right:-100%;
+		}
 	}
+	
+	#introContainer{
+		@include basic;
+	}
+
+	.veArriba{
+		top: -100%;
+	}
+
 }
 
 .video{
@@ -138,20 +115,28 @@ html, body, #page, .site-inner, .site-content, .wrapper, .intro{
     height: auto;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
- 	background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+ 	/*background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;*/
   	background-size: cover;
   	transition: 1s opacity;
 
 }
 
-.black{
+#black{
+	display: none;
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,1);
-	-webkit-transition: all .5s; /* Safari */
-    transition: all .5s;
+	background-color: rgba(14,14,14,1);
+	z-index: 11;
+	@include basic;
+
+	&.animated.fadeIn{
+		display: block;
+	}
 }
+
+
+
 
 
 @media screen and (min-width: 1025px) {
