--- a/_dev/scss/mixins.scss
+++ b/_dev/scss/mixins.scss
@@ -4,3 +4,11 @@
 	-o-transition: all  ease-in-out 1s;
 	transition: all  ease-in-out 1s;
 }
+
+@mixin nav {
+	-webkit-transition: all  .5s;
+	-moz-transition: all  .5s;
+	-o-transition: all  .5s;
+	transition: all  .5s;
+	transition-timing-function: cubic-bezier(.13,.5,.31,.88);
+}
