--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -18,6 +18,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "reset";
 @import "vars";
 @import "mixins";
+@import "nav";
 
 /*Home*/
 html, body, #page, .site-inner, .site-content, .wrapper, .intro{
