--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,1 +1,7 @@
-<h1>contacto.html</h1>
+<div class="contacto">
+	<h2>Contacto</h2>
+	<div id="map"></div>
+	<div class="contenido">
+		
+	</div>
+</div>
