--- a/views/intro.html
+++ b/views/intro.html
@@ -1,4 +1,4 @@
-<section class="intro" style="background-image:url({{albercaDatos.image_bg}});">
+<section class="intro" >
 	<div id="introContainer" class="intro_container animated">
 		<h1>
 			{{albercaDatos.titulo}}
