--- a/views/habitaciones.html
+++ b/views/habitaciones.html
@@ -1,18 +1,46 @@
 <section class="habitaciones">
 	<h2>Apartamentos</h2>
 	<div class="apartamentos">
-		<ul>
-			<li>Lady Hester<br/>Lucy Stanhope</li>
-			<li>Isabel<br/>Burton</li>
-			<li>Agatha<br/>Christie</li>
-			<li>Gertrude<br/>Bell</li>
-			<li>Lady Mary<br/>Wortley<br/>Montagu</li>
-			<li>Freya<br/>Stark</li>
-			<li>Lady Jane<br/>Digby</li>
+		<ul class="">
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Lady Hester<br/>Lucy Stanhope</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Isabel<br/>Burton</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Agatha<br/>Christie</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Gertrude<br/>Bell</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Lady Mary<br/>Wortley<br/>Montagu</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Freya<br/>Stark</p>
+				</div>
+			</li>
+			<li class="col-xs-6 col-sm-4">
+				<div class="col-xs-12">
+					<p>Lady Jane<br/>Digby</p>
+				</div>
+			</li>
 		</ul>
 
 		<p class="aptDescripcion">
-			
+			{{albercaDatos.apartamentos}}
 		</p>
 	</div>
 
