--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -296,11 +296,51 @@ body{
 
 
 /*CONTACTO*/
- #map {
-        width: 100%;
-        height: 400px;
-        background-color: grey;
-      }
+.contacto{
+	background-color: $white;
+	height: 100%;
+	min-height: 100%;
+	padding: 0px 20px;
+
+	h2{
+		text-align: center;
+		font-size: 55px;
+		padding: 40px 20px 20px 20px;
+		font-weight: bold;
+	}
+
+	#map {
+	    width: 100%;
+	    height: 400px;
+	    background-color: grey;
+	}
+
+
+	.contenido{
+		margin-top: 20px;
+		padding-bottom: 20px;
+		img{
+			max-width: 100%;
+			display: block;
+			margin: 0px auto;
+		}
+		h4{
+			text-align: center;
+			font-size: 20px;
+
+			a{
+				text-decoration: underline;
+				color: $grey-text;
+			}
+
+			&.telefono{
+				padding-top: 40px;
+			}
+		}
+	}
+}
+ 
+
 /*END CONTACTO*/
 
 
