--- a/style.css
+++ b/style.css
@@ -1256,10 +1256,35 @@ body {
 
 /*END Habitaciones*/
 /*CONTACTO*/
-#map {
-  width: 100%;
-  height: 400px;
-  background-color: grey; }
+.contacto {
+  background-color: #ffffff;
+  height: 100%;
+  min-height: 100%;
+  padding: 0px 20px; }
+  .contacto h2 {
+    text-align: center;
+    font-size: 55px;
+    padding: 40px 20px 20px 20px;
+    font-weight: bold; }
+  .contacto #map {
+    width: 100%;
+    height: 400px;
+    background-color: grey; }
+  .contacto .contenido {
+    margin-top: 20px;
+    padding-bottom: 20px; }
+    .contacto .contenido img {
+      max-width: 100%;
+      display: block;
+      margin: 0px auto; }
+    .contacto .contenido h4 {
+      text-align: center;
+      font-size: 20px; }
+      .contacto .contenido h4 a {
+        text-decoration: underline;
+        color: #565656; }
+      .contacto .contenido h4.telefono {
+        padding-top: 40px; }
 
 /*END CONTACTO*/
 /*
