--- a/views/contacto.html
+++ b/views/contacto.html
@@ -2,6 +2,70 @@
 	<h2>Contacto</h2>
 	<div id="map"></div>
 	<div class="contenido">
-		
+		<img src="http://albercacordoba.dev/wp-content/themes/Alberca/images/general/advisor.jpg" alt="">
+    <h4 class="info telefono">
+    <a href="tel://{{albercaDatos.telefono}}">Tlf: (+34) {{albercaDatos.telefono}}</a>
+    </h4>
+    <h4 class="info"><a href="mailto:apartamentosalberca@gmail.com">apartamentosalberca@gmail.com</a></h4>
+    <h4 class="info"><a href="mailto:reservas@albercacordoba.com">reservas@albercacordoba.com</a></h4>
 	</div>
 </div>
+
+
+<script>
+     function initMap() {
+
+     	 var styledMapType = new google.maps.StyledMapType(
+            [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#46bcec"},{"visibility":"on"}]}],
+            {name: 'Styled Map'});
+
+
+        var center = {lat:  37.883639, lng: -4.775963};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 16,
+          center: center,
+          scrollwheel:  false
+        });
+        var marker = new google.maps.Marker({
+          position: center,
+          map: map
+        });
+
+
+
+        map.mapTypes.set('styled_map', styledMapType);
+        map.setMapTypeId('styled_map');
+
+      }
+
+
+       // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          console.log("Tengo localizador");
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+      }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHxsGHdU-7EzE29SIW9HOrXWPllB9-5UE&callback=initMap"
+async defer></script>
