Tratando de inyectar las habitaciones individuales

--- a/views/habitaciones.html
+++ b/views/habitaciones.html
@@ -45,7 +45,18 @@
 	</div>
 
 	<div class="apartamento">
+		<h3>{{albercaDatos.habitacion_1}}</h3>
+
+		<p>
+			{{albercaDatos.descripcion1}}
+		</p>
 		
+
+
+		<p>
+			Instalaciones
+		</p>
+
 	</div>	
 	
 </section>
