--- a/_dev/scss/style.scss
+++ b/_dev/scss/style.scss
@@ -290,6 +290,16 @@ body{
 	}
 
 
+	.apartamento{
+		width: 100%;
+		height: 100%;
+		background-color: $white;
+		position: absolute;
+		top: 0px;
+		left: 100%;
+	}
+
+
 }
 /*END Habitaciones*/
 
