--- a/style.css
+++ b/style.css
@@ -1253,6 +1253,13 @@ body {
         top: -10px;
         left: 50%;
         margin-left: -150px; }
+  .habitaciones .apartamento {
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    position: absolute;
+    top: 0px;
+    left: 100%; }
 
 /*END Habitaciones*/
 /*CONTACTO*/
